@@ -1,6 +1,9 @@
 1.5.6 (23.11.2016):
 
 * Catch errors importing text layer of DjVu.
+* + support for dragging files from Nautilus (or Konqueror, or anything that
+  delivers URIs). Closes Launchpad (Ubuntu) bug #515854:
+  (Drag and drop PDF from Nautilus should import PDF)
 
 
 1.5.5 (23.10.2016):
